--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,18 +1,24 @@
-server {
-  listen ${PORT};
+events {
+    worker_connections 1024;
+}
 
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
+http { 
+  server {
+    listen ${PORT};
 
-  error_page 404 /404.html;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-  location / {
-    root /www/owlficinas;
-  }
+    error_page 404 /404.html;
 
-  location /arquivos/ {
-    add_header Content-Type text/plain;
-    autoindex on;
-    root /www;
+    location / {
+      root /www/owlficinas;
+    }
+
+    location /arquivos/ {
+      add_header Content-Type text/plain;
+      autoindex on;
+      root /www;
+    }
   }
 }
